--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.com/libraries/remixicon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>D'lafi Healthy Food</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -37,12 +37,12 @@
              </ul>
              <!-- close button -->
              <div class="nav_close" id="nav-close">
-               <i class="ri-close-large-line"></i>
+                <i class="fa-solid fa-xmark"></i>
              </div>
             </div>
             <!-- toggle button -->
              <div class="nav_toggle" id="nav-toggle">
-              <i class="ri-apps-2-fill"></i>
+             <i class="fa-solid fa-grip"></i>
              </div>
         </nav>
     </header>
