edit header nav for mobile view

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>D'lafi Healthy Food</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <header class="header" id="header">
         <!-- navigation section -->
-        <nav class="nav container">
+        <nav class="nav_container">
             <!-- nav logo section -->
             <a href="#" class="nav_logo">
                 <img src="IMG/nav-logo.jpeg" alt="image">
