Nav-bar add hover

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <div class="nav_menu" id="nav-menu"> 
             <ul class="nav_list">
                 <li>
-                    <a href="#home" class="nav_home">Home</a>
+                    <a href="#home" class="nav_link">Home</a>
                 </li>
 
                 <li>
-                    <a href="#profile" class="nav_profile">Profile</a>
+                    <a href="#profile" class="nav_link">Profile</a>
                 </li>
 
                 <li>
-                    <a href="#article" class="nav_article">Article</a>
+                    <a href="#article" class="nav_link">Article</a>
                 </li>
 
                 <li>
-                    <a href="#contact" class="nav_contact">Contact</a>
+                    <a href="#contact" class="nav_link">Contact</a>
                 </li>
              </ul>
              <!-- close button -->
